--- a/.arkitekt/manifest.yaml
+++ b/.arkitekt/manifest.yaml
@@ -1,9 +1,9 @@
 author: root
-command: conda run arkitekt port
+command: conda run arkitekt run port
 entrypoint: app
 identifier: dekon
 requirements:
 - gpu
 scopes:
 - read
-version: 0.0.1
+version: 0.0.2
