--- a/.arkitekt/deployments.yaml
+++ b/.arkitekt/deployments.yaml
@@ -1,13 +1,26 @@
 deployments:
-  - author: root
-    command: conda run arkitekt port
-    created_at: "2023-07-19T13:46:39.899693"
-    definitions: []
-    entrypoint: app
-    identifier: dekon
-    image: jhnnsrs/dekon:0.0.1
-    requirements:
-      - gpu
-    scopes:
-      - read
-    version: 0.0.1
+- author: root
+  command: conda run arkitekt run port
+  created_at: '2023-07-19T13:46:39.899693'
+  definitions: []
+  entrypoint: app
+  identifier: dekon
+  image: jhnnsrs/dekon:0.0.1
+  requirements:
+  - gpu
+  scopes:
+  - read
+  version: 0.0.1
+- author: root
+  command: conda run arkitekt run port
+  created_at: '2023-07-19T13:56:02.790932'
+  definitions: []
+  entrypoint: app
+  identifier: dekon
+  image: jhnnsrs/dekon:0.0.2
+  requirements:
+  - gpu
+  scopes:
+  - read
+  version: 0.0.2
+latest_deployment: '2023-07-19T13:56:12.384213'
